# camillagui-backend

./: .gitignore  README.md  camillaflask.py  filemanagement.py  filterdefaults.py  main.py  offline.py  pyproject.toml  routes.py  settings.py  version.py  views.py
.github/workflows/: build.yml  publish.yml
backend/: convolver_config_import.py  convolver_config_import_test.py  eqapo_config_import.py  eventstream.py  filemanagement.py  filterdefaults.py  filters.py  filters_test.py  legacy_config_import.py  levelstream.py  offline.py  routes.py  settings.py  settings_schemas.py  statics.py  validation.py  version.py  views.py
backend/filterdefaults/: filterdefaults.py  wavedefaults.py
config/: camillagui.yml  gui-config.yml
release_automation/: render_env_files.py  versions.yml
release_automation/templates/: cdsp_conda.yml.j2  pyproject.toml.j2  requirements.txt.j2
tests/: test_basic_api.py  test_convolver_config_import.py  test_eqapo_config_import.py  test_filemanagement_paths.py  test_filters.py  test_identify_config_version.py  test_legacy_config.py  test_levelstream.py
tests/testfiles/: config.yml  config2.yml  gui_config.yml  log.txt  statefile_template.yml
